scaffolder-templates/gitlab/vote-api-go/skeleton/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pipelines-vote-api
  name: pipelines-vote-api
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: 9000-tcp
  selector:
    app: pipelines-vote-api
