scaffolder-templates/gitlab/vote-api-go/skeleton/k8s/el-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: vote-api
  name: el-vote-api
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-vote-api
    weight: 100
